force-app/main/default/objects/Revenue_Accrual__c/fields/Prior_Total_Estimated_Fees__c.field-meta.xml
<CustomField>
    <fullName>Prior_Total_Estimated_Fees__c</fullName>
    <label>Prior Total Estimated Fees</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>