force-app/main/default/objects/Revenue_Accrual__c/fields/Prior_YTD_Accrued_Fees_GBP__c.field-meta.xml
<CustomField>
    <fullName>Prior_YTD_Accrued_Fees_GBP__c</fullName>
    <label>Prior YTD Accrued Fees GBP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>