force-app/main/default/objects/Revenue_Accrual__c/fields/Prior_YTD_Accrued_Fees_USD__c.field-meta.xml
<CustomField>
    <fullName>Prior_YTD_Accrued_Fees_USD__c</fullName>
    <label>Prior YTD Accrued Fees USD</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>