force-app/main/default/objects/Revenue_Accrual__c/fields/Rate_to_USD__c.field-meta.xml
<CustomField>
    <fullName>Rate_to_USD__c</fullName>
    <label>Rate to USD</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>