force-app/main/default/objects/Revenue_Accrual__c/fields/Total_Accrued_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Accrued_Fees__c</fullName>
    <label>Total Accrued Fees</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>