force-app/main/default/objects/Revenue_Accrual__c/fields/Total_Estimated_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Fee__c</fullName>
    <label>Total Estimated Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>