force-app/main/default/objects/Revenue_Accrual__c/fields/Total_Fee_GBP__c.field-meta.xml
<CustomField>
    <fullName>Total_Fee_GBP__c</fullName>
    <formula>Total_Fee_LOCAL__c * Rate_to_GBP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Fee GBP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>