force-app/main/default/objects/Revenue_Accrual__c/fields/Total_Fee_LOCAL__c.field-meta.xml
<CustomField>
    <fullName>Total_Fee_LOCAL__c</fullName>
    <label>Total Fee LOCAL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>