force-app/main/default/objects/Revenue_Accrual__c/fields/Touch__c.field-meta.xml
<CustomField>
    <fullName>Touch__c</fullName>
    <label>Touch</label>
    <type>DateTime</type>
</CustomField>