force-app/main/default/objects/Revenue_Accrual__c/fields/Year_Month__c.field-meta.xml
<CustomField>
    <fullName>Year_Month__c</fullName>
    <formula>HYPERLINK(&quot;/?sort=&quot; &amp; TEXT(Year__c) + &quot; - &quot; +  TEXT(Month__c), &quot;&quot;, &quot;_parent&quot;) &amp; 
HYPERLINK(&quot;/&quot; &amp; Id, TEXT(Year__c) + &quot; - &quot; +  TEXT(Month__c),&quot;_parent&quot;)</formula>
    <label>Year-Month</label>
    <type>Text</type>
</CustomField>