force-app/main/default/objects/Revenue_Accrual__c/fields/YTD_Accrued_Fees_LOCAL__c.field-meta.xml
<CustomField>
    <fullName>YTD_Accrued_Fees_LOCAL__c</fullName>
    <inlineHelpText>Value reflected in the Engagement&apos;s Currency.</inlineHelpText>
    <label>YTD Accrued Fees LOCAL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>