force-app/main/default/objects/Revenue_Accrual__c/recordTypes/CF_Revenue_Accrual.recordType-meta.xml
<RecordType>
    <fullName>CF_Revenue_Accrual</fullName>
    <active>true</active>
    <label>CF Revenue Accrual</label>
</RecordType>