force-app/main/default/objects/Revenue_Accrual__c/recordTypes/FAS_Revenue_Accrual.recordType-meta.xml
<RecordType>
    <fullName>FAS_Revenue_Accrual</fullName>
    <active>true</active>
    <label>FVA Revenue Accrual</label>
</RecordType>