force-app/main/default/objects/Revenue_Accrual__c/recordTypes/FR_Revenue_Accrual.recordType-meta.xml
<RecordType>
    <fullName>FR_Revenue_Accrual</fullName>
    <active>true</active>
    <label>FR Revenue Accrual</label>
</RecordType>