force-app/main/default/objects/Revenue_Accrual__c/recordTypes/SC_Revenue_Accrual.recordType-meta.xml
<RecordType>
    <fullName>SC_Revenue_Accrual</fullName>
    <active>true</active>
    <label>SC Revenue Accrual</label>
</RecordType>