force-app/main/default/objects/Revenue_Accrual__c/validationRules/Disable_Edit_for_Rev_Acc.validationRule-meta.xml
<ValidationRule>
    <fullName>Disable_Edit_for_Rev_Acc</fullName>
    <active>true</active>
    <description>if today&apos;s month/year does not match Rev Acc&apos;s month/year</description>
    <errorConditionFormula>OR(ISBLANK(Monthly_Revenue_Process_Control__r.Id), NOT(Monthly_Revenue_Process_Control__r.IsCurrent__c)) &amp;&amp;  $Profile.Name &lt;&gt; &apos;System Administrator&apos;</errorConditionFormula>
    <errorMessage>Revenue Accruals belonging to previous months are not editable.</errorMessage>
</ValidationRule>