force-app/main/default/objects/Revenue_Accrual__c/validationRules/Is_Revenue_Accrual_Locked.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Revenue_Accrual_Locked</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.HL_General__c.Revenue_Accrual_Locked__c &amp;&amp; $Profile.Name != &apos;System Administrator&apos; &amp;&amp; $Profile.Name != &apos;Accounting User&apos;</errorConditionFormula>
    <errorMessage>Revenue Accrual is Currently Locked</errorMessage>
</ValidationRule>