force-app/main/default/objects/Revenue_Accrual__c/validationRules/Total_Accrued_Fees_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Accrued_Fees_Not_Negative</fullName>
    <active>false</active>
    <errorConditionFormula>Total_Accrued_Fees__c &lt; 0</errorConditionFormula>
    <errorMessage>Total Accrued Fees must be greater than or equal to zero</errorMessage>
</ValidationRule>