force-app/main/default/objects/Revenue_Accrual__c/validationRules/Total_Estimated_Fees_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Estimated_Fees_Not_Negative</fullName>
    <active>false</active>
    <errorConditionFormula>Total_Estimated_Fee__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Total_Estimated_Fee__c</errorDisplayField>
    <errorMessage>The Total Estimated Fees must be greater than or equal to zero</errorMessage>
</ValidationRule>