force-app/main/default/objects/Revenue_Accrual__c/listViews/All_Revenue_Accruals.listView-meta.xml
<ListView>
    <fullName>All_Revenue_Accruals</fullName>
    <columns>Engagement_Year_Month__c</columns>
    <columns>NAME</columns>
    <columns>Engagement_Number__c</columns>
    <columns>Year_Month__c</columns>
    <columns>Total_Estimated_Fee__c</columns>
    <columns>Percent_Complete__c</columns>
    <columns>Period_Accrued_Fees__c</columns>
    <columns>Total_Accrued_Fees__c</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Revenue Accruals</label>
</ListView>