force-app/main/default/objects/Revenue_Accrual__c/listViews/Open_Revenue_Accruals.listView-meta.xml
<ListView>
    <fullName>Open_Revenue_Accruals</fullName>
    <columns>Engagement_Year_Month__c</columns>
    <columns>NAME</columns>
    <columns>Engagement_Number__c</columns>
    <columns>Percent_Complete__c</columns>
    <columns>Period_Accrued_Fees__c</columns>
    <columns>Total_Accrued_Fees__c</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Open Revenue Accruals</label>
</ListView>